--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-# Bootstrap
+# Booststrap
 
 <!DOCTYPE html>
 <html lang="pt-br">
@@ -7,9 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap</title>
+
+    <!-- Link  para pegar o estilo dos servidores do CSS-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
 </head>
 <body>
+  <!--Menu-->
     <nav class="navbar navbar-expand-lg 
     navbar-light bg-primary">
         <div class="container-fluid">
@@ -52,8 +55,44 @@
           </div>
         </div>
       </nav>
+<!--Menu-->
+
+<!--Grid-->
+<div class="container">
+<div class="row mt-5 d-flex justify-content-center">
+
+<div class="col-md-1 p-0">
+<div class="bg-danger"> 1 colunas</div>
+</div>
+
+<div class="col-md-1 p-0">
+<div class="bg-warning"> 2 colunas</div>
+</div>
+
+<div class="col-md-1 p-0">
+<div class="bg-info"> 3 colunas</div>
+</div>
+
+<div class="col-md-1 p-0">
+<div class="bg-dark"> 4 colunas</div>
+</div>
+
+<div class="col-md-1 p-0">
+<div class="bg-sucess"> 5 colunas</div>
+</div>
 
 
+</div>
+</div>
+</div>
+
+
+
+
+
+<!--Grid-->
+
+<!--Scripts necessario para utilizaçao dos codigos JS do Bootstrap -->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"   
 integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"    
 crossorigin="anonymous"></script>
